05-11-18

Updated groovy import script for premium.

Handles xls files with new import routines - some recent xls files show issues that need to be addressed but no Ed Broking data.

Importing brings the names of cells imported into line with the default display name of the value found.

New poi based reading of xlsx enabled. Much faster than ZK.


01-11-18

New 'check' work (not yet completed) - basic column validation for when users mix up columns in a data file

Fixed bug where ` was deleted from start of import string

Some work on how groovy scripts are loaded

Further work on new faster POI import, may be enabled early next week

Fixed nasty bug when saving using a temporary set. Lookup on temporary sets should be by user email/logon NOT name!


31-10-18-2

Removed the ZK importer optimization, it was causing a problem with sheet update detection (snap charts and resolve formulae function)


31-10-18

Initial version of pending uploads - only visible if some files actually are there to be processed

Batch importer line exceptions now pushed into "rejected lines" rather than stopping the whole import.

Rejigging jar libraries as poi and ZK don't coexist well, more work on faster poi based import but this is still quarantined


29-10-18-2

Import throws an error if lookup not found


29-10-18

Apache POI libraries added for import optimizeation work (code currently disabled)

Better feedback on the import on whether the database was actually changed or not

File import parameter assumptions now override any value found on file. (for Ed Broking where 'certain underwriters at Lloyds' does not mean the default value (BB007620))

25-10-18

Added 'exclusive' to 'classification' when importing

Bug fix stopped numbers ending in 'F' being recognised as numbers (parseDouble recognises '17F')


24-10-18-4

Bug fix - ZK force formula check on all sheets not just the front one


24-10-18-3

Bug fix on keeping user menus when overwriting databases


24-10-18-2
