@@ -21,8 +21,8 @@ linux-8bsg.scanbusiness=Magento
 #this one is hacky I know . . .
 linux-8bsg.scanparams=Import Template|Import template 1,risk RT,risk allrisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18
 linux-8bsg.patchfilessource=/home/edward/patchfiles
-linux-8bsg.logonpageoverride=
-linux-8bsg.logonpagecolour=
+linux-8bsg.logonpageoverride=edbroking_login
+linux-8bsg.logonpagecolour=#eded24
 linux-8bsg.logonpagemessage=
 
 
@@ -57,8 +57,8 @@ gzksd-azq01.scanbusiness=Ed Broking
 #this one is hacky I know . . .
 gzksd-azq01.scanparams=Import Template|Import template 1,risk RT,risk allrisks|Month|Jan-18,Feb-18,Mar-18,Apr-18,May-18,Jun-18,Jul-18,Aug-18,Sep-18,Oct-18,Nov-18,Dec-18
 gzksd-azq01.logonpageoverride=edbroking_login
-gzksd-azq01.logonpagecolour=
-gzksd-azq01.logonpagemessage=
+gzksd-azq01.logonpagecolour=#241bed
+gzksd-azq01.logonpagemessage=<br/><b>DEV - may be updated at any time</b>
 
 
 
@@ -69,8 +69,8 @@ gzksu-azq01.alias=Ed Broking UAT
 gzksu-azq01.scandir=
 gzksu-azq01.patchfilessource=/home/CawleyE/patchfiles
 gzksu-azq01.logonpageoverride=edbroking_login
-gzksu-azq01.logonpagecolour=
-gzksu-azq01.logonpagemessage=
+gzksu-azq01.logonpagecolour=#eded24
+gzksu-azq01.logonpagemessage=<br/><b>UAT System</b>
 # Ed broking prod
 gzksp-azq01.azquo.home=/home/CawleyE
 gzksp-azq01.dev.machine=false
@@ -78,5 +78,5 @@ gzksp-azq01.alias=Ed Broking Production
 gzksp-azq01.scandir=
 gzksp-azq01.patchfilessource=/home/CawleyE/patchfiles
 gzksp-azq01.logonpageoverride=edbroking_login
-gzksp-azq01.logonpagecolour=
+gzksp-azq01.logonpagecolour=#ed1b24
 gzksp-azq01.logonpagemessage=
