@@ -1,3 +1,10 @@
+05-11-18-2
+
+Formatting import error messages.
+
+Zap pending uploads when deleting a database. Logon page override configurable. Factor properties code.
+
+
 05-11-18
 
 Updated groovy import script for premium.
